# optivibre

./: .gitignore  Cargo.toml  README.md  ccs_clippy
.cargo/: config.toml
bench_report/: Cargo.toml
bench_report/examples/: minimal.rs
bench_report/src/: lib.rs
docs/: getting-started.md  ipopt-intermediate-primal-iterate.md  ipopt-parity-coverage.md  map-fold-mapaccum.md  native-solver-packaging.md  native-spral-parity-manifest.md  spral-matching-scaling-port.md  spral-ssids-parity-flow.md  ssids-glider-performance-source-compare.md  ssids-linear-source-difference-audit.md
examples_run/: Cargo.toml  build.rs
examples_run/benches/: ad_cost.rs
examples_run/src/: lib.rs
examples_run/tests/: casadi_examples.rs  generated.rs
ipopt-src/: Cargo.toml  build.rs
ipopt-src/src/: lib.rs
ipopt-src/tests/: link_audit.rs  smoke.rs
lqr_solvers/: Cargo.toml
lqr_solvers/src/: lib.rs
metis_ordering/: Cargo.toml
metis_ordering/benches/: ordering_validation.rs
metis_ordering/fuzz/: Cargo.toml
metis_ordering/fuzz/corpus/csr_new/: path_star_seed
metis_ordering/fuzz/corpus/from_symmetric_csc/: grid_seed
metis_ordering/fuzz/corpus/nested_dissection_order/: kkt_seed
metis_ordering/fuzz/fuzz_targets/: csr_new.rs  from_symmetric_csc.rs  nested_dissection_order.rs
metis_ordering/src/: lib.rs  mmd.rs
metis_ordering/tests/: nested_dissection.rs  property.rs
multikite_sim/: Cargo.toml
multikite_sim/assets/: AVL_Reference_fit.json  XROTOR_Reference_fit.json  asset_manifest.json  reference_export.json
multikite_sim/docs/: model_parity.md
multikite_sim/src/: aero_analysis.rs  assets.rs  controller.rs  lib.rs  math.rs  model.rs  runtime.rs  turbulence.rs  types.rs
multikite_sim/src/controller/: actuators.rs  lateral.rs  longitudinal.rs  state.rs
multikite_webapp/: Cargo.toml  build.rs  package-lock.json  package.json  tsconfig.json
multikite_webapp/src/: main.rs
multikite_webapp/static/: aero_analysis.html  aero_analysis.ts  app.ts  index.html  styles.css
optimal_control/: Cargo.toml
optimal_control/src/: lib.rs  ocp_jacobian_prop_tests.rs  runtime.rs
optimal_control/tests/: lqr_reference.rs  runtime_api.rs
optimal_control_benchmarks/: Cargo.toml  build.rs
optimal_control_problems/: Cargo.toml
optimal_control_problems/src/: albatross.rs  benchmark_report.rs  common.rs  crane.rs  glider.rs  lib.rs  linear_s.rs  sailboat.rs  static_optimization.rs
optimal_control_problems/tests/: derivative_checks.rs
optimal_control_webapp/: Cargo.toml  package-lock.json  package.json  tsconfig.json
optimal_control_webapp/src/: main.rs
optimal_control_webapp/static/: app.js  app.ts  index.html  styles.css
optimization/: Cargo.toml
optimization/src/: filter.rs  interior_point.rs  ipopt_backend.rs  lib.rs  symbolic.rs  validation.rs  vectorize.rs
optimization/tests/: generated_symbolic_nlp_jacobian_props.rs  interior_point.rs  interior_point_compare.rs  ipopt.rs  nalgebra_vectorize.rs  spral_symbolic_analysis.rs  sqp.rs  sqp_callback_api.rs  symbolic_jit_nlp.rs  vectorize_layout.rs
optimization/tests/support/: generated_problem.rs
optimization_studio/: Cargo.toml  build.rs  package-lock.json  package.json
optimization_studio/src/: main.rs
optimization_studio/static/: app.ts  globals.d.ts  index.html  styles.css
sparse_validation/: Cargo.toml
sparse_validation/src/: corpus.rs  lib.rs  matrix_market.rs  metrics.rs  model.rs  references.rs  report.rs  runner.rs
spral-src/: Cargo.toml  README.md  build.rs
spral-src/src/: lib.rs
spral-src/tests/: link_audit.rs  openblas_threading.rs  smoke.rs
spral_ssids/: Cargo.toml
spral_ssids/benches/: symbolic_validation.rs
spral_ssids/fuzz/: Cargo.toml
spral_ssids/fuzz/corpus/factorize/: delayed_chain_seed
spral_ssids/fuzz/fuzz_targets/: analyse.rs  factorize.rs  symmetric_csc_new.rs
spral_ssids/src/: lib.rs  native.rs
spral_ssids/tests/: analysis.rs  bitwise_mismatch_proptest.rs  bitwise_parity.rs  native.rs  numeric.rs  property.rs
ssids-rs/: Cargo.toml
ssids-rs/benches/: symbolic_validation.rs
ssids-rs/fuzz/: Cargo.toml
ssids-rs/fuzz/corpus/analyse/: delayed_chain_seed
ssids-rs/fuzz/corpus/factorize/: saddle_kkt_seed
ssids-rs/fuzz/corpus/symmetric_csc_new/: saddle_kkt_seed
ssids-rs/fuzz/fuzz_targets/: analyse.rs  factorize.rs  symmetric_csc_new.rs
ssids-rs/src/: lib.rs  match_order.rs  native.rs
ssids-rs/tests/: analysis.rs  bitwise_mismatch_proptest.rs  bitwise_parity.rs  matching_scaling_parity.rs  native.rs  numeric.rs  parallel_safety.rs  property.rs
sx_codegen/: Cargo.toml
sx_codegen/src/: lib.rs
sx_codegen/tests/: ad_cost.rs  call_policies.rs
sx_codegen_llvm/: Cargo.toml
sx_codegen_llvm/src/: jit_cache.rs  lib.rs
sx_codegen_llvm/tests/: call_policy_derivative_diagnostic.rs  casadi_parity.rs  generated_jacobian_props.rs
sx_core/: Cargo.toml
sx_core/src/: ccs.rs  error.rs  expr.rs  function.rs  lib.rs  matrix.rs  sx.rs  types.rs
sx_core/tests/: casadi_parity.rs  core.rs  function_calls.rs  function_ccs.rs
test_problems/: Cargo.toml  build.rs
test_problems/src/: dashboard.rs  lib.rs  manifest.rs  model.rs  report.rs  runner.rs  transcript.rs
test_problems/src/problems/: burkardt_test_nonlin.rs  disk_rosenbrock.rs  hanging_chain.rs  hs021.rs  hs035.rs  hs071.rs  mod.rs  parameterized_quadratic.rs  schittkowski_306.rs
test_problems/src/problems/schittkowski_306/: README.md  helpers.rs  mod.rs  tests.rs  tp001.rs  tp002.rs  tp003.rs  tp004.rs  tp005.rs  tp006.rs  tp007.rs  tp008.rs  tp009.rs  tp010.rs  tp011.rs  tp012.rs  tp013.rs  tp014.rs  tp015.rs  tp016.rs  tp017.rs  tp018.rs  tp019.rs  tp020.rs  tp021.rs  tp022.rs  tp023.rs  tp024.rs  tp025.rs  tp026.rs  tp027.rs  tp028.rs  tp029.rs  tp030.rs  tp031.rs  tp032.rs  tp033.rs  tp034.rs  tp035.rs  tp036.rs  (+186 more)
test_problems/tests/: known_passing.rs
vectorize/: Cargo.toml
vectorize/src/: lib.rs  nalgebra_support.rs
vectorize/tests/: direct_derive.rs  nalgebra_support.rs
vectorize_derive/: Cargo.toml
vectorize_derive/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+27 files in other folders)
