[workspace]
members = [
    "bench_report",
    "sx_core",
    "sx_codegen",
    "sx_codegen_llvm",
    "optimization",
    "optimal_control",
    "optimal_control_problems",
    "optimal_control_benchmarks",
    "optimal_control_webapp",
    "lqr_solvers",
    "optimization_derive",
    "test_problems",
    "examples_source",
    "examples_run",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2024"
homepage = "https://github.com/ghorn/ad_codegen_rs"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ghorn/ad_codegen_rs"
rust-version = "1.94"
version = "0.1.0"

[workspace.dependencies]
anyhow = "1.0.97"
approx = "0.5.1"
clap = { version = "4.5.49", features = ["derive", "env"] }
clarabel = "0.11.1"
criterion = { version = "0.5.1", features = ["html_reports"] }
llvm-sys = { version = "221.0.0", features = ["prefer-dynamic", "strict-versioning"] }
nalgebra = { version = "0.33.2", default-features = false, features = ["std"] }
libc = "0.2.172"
proptest = "1.7.0"
rstest = "0.25.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
rayon = "1.11.0"
tempfile = "3.20.0"
thiserror = "2.0.12"
toml = "0.8.22"
syn = { version = "2.0.106", features = ["full"] }
quote = "1.0.40"
proc-macro2 = "1.0.95"

[workspace.lints.rust]
warnings = "deny"

[workspace.lints.clippy]
all = "deny"
todo = "deny"
unimplemented = "deny"

# TODO(greg): Remove this temporary vendored override once
# https://github.com/elrnv/ipopt-rs/pull/19 is released to crates.io, then
# switch back to the published `ipopt`/`ipopt-sys` 0.7.x crates.
[patch.crates-io]
ipopt = { path = "third_party/ipopt" }
ipopt-sys = { path = "third_party/ipopt-sys" }
