[package]
name = "bench_report"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
sx_codegen = { path = "../sx_codegen" }
sx_core = { path = "../sx_core" }
