[package]
name = "examples_run"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
build = "build.rs"
description = "Internal executable examples, reports, and benches for ad_codegen_rs."

[lints]
workspace = true

[features]
default = []
ad-bench-artifacts = []

[dependencies]
anyhow.workspace = true
bench_report = { path = "../bench_report" }
clap.workspace = true
examples_source = { path = "../examples_source" }
serde.workspace = true
serde_json.workspace = true
sx_core = { path = "../sx_core" }
sx_codegen = { path = "../sx_codegen" }
sx_codegen_llvm = { path = "../sx_codegen_llvm" }
tempfile.workspace = true

[build-dependencies]
anyhow.workspace = true
examples_source = { path = "../examples_source" }
sx_codegen = { path = "../sx_codegen" }
sx_codegen_llvm = { path = "../sx_codegen_llvm" }

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
examples_source = { path = "../examples_source" }
sx_codegen = { path = "../sx_codegen" }

[[bench]]
name = "ad_cost"
harness = false
required-features = ["ad-bench-artifacts"]

[[bin]]
name = "ad_cost_suite"
path = "src/bin/ad_cost_suite.rs"
required-features = ["ad-bench-artifacts"]
