[package]
name = "ipopt-src"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
links = "ipopt"
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Source-built IPOPT 3.14.20 linked against the spral-src native solver stack."

[features]
default = ["source-built-spral"]
source-built-spral = ["spral", "spral-src/openblas-serial"]
source-built-spral-openmp = ["spral", "spral-src/openblas-openmp"]
spral = ["dep:spral-src"]
openblas-serial = ["source-built-spral"]
openblas-openmp = ["source-built-spral-openmp"]

# Upstream-compatible feature names. They are explicit non-parity lanes in this
# fork until MUMPS/MKL can share a single BLAS owner with the SPRAL path.
mumps = []
openblas-static = []
openblas-system = []
intel-mkl = []
intel-mkl-static = ["intel-mkl"]
intel-mkl-system = ["intel-mkl"]

[dependencies]
spral-src = { path = "../spral-src", optional = true, default-features = false }

[build-dependencies]
flate2 = "1.1.5"
sha2 = "0.10.9"
tar = "0.4.44"
ureq = { version = "3.1.4", default-features = false, features = ["native-tls"] }

[lints]
workspace = true
