[package]
name = "lqr_solvers"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Reference Riccati and LQR utilities for optimal control tests."

[lints]
workspace = true

[dependencies]
nalgebra.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
