[package]
name = "metis_ordering"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Pure-Rust graph ordering primitives and nested-dissection heuristics for ad_codegen_rs."

[dependencies]
amd.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
criterion.workspace = true
proptest.workspace = true

[lints]
workspace = true

[[bench]]
name = "ordering_validation"
harness = false
