[package]
name = "multikite_webapp"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
axum = "0.8.6"
clap.workspace = true
multikite_sim = { path = "../multikite_sim" }
nalgebra.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.48.0", features = ["macros", "rt", "net", "sync"] }
tokio-stream = "0.1.17"

[build-dependencies]

[lints]
workspace = true
