[package]
name = "optimal_control"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Typed optimal control transcription on top of the ad_codegen_rs symbolic NLP stack."

[lints]
workspace = true

[features]
ipopt = ["optimization/ipopt"]

[dependencies]
anyhow.workspace = true
nalgebra.workspace = true
optimization = { path = "../optimization" }
sx_codegen_llvm = { path = "../sx_codegen_llvm" }
sx_core = { path = "../sx_core" }
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
lqr_solvers = { path = "../lqr_solvers" }
