[package]
name = "optimal_control_problems"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Reference optimal-control problems and visualization payloads for the optimal_control crate."

[lints]
workspace = true

[features]
default = ["ipopt"]
ipopt = ["optimal_control/ipopt", "optimization/ipopt"]
native-spral-src = ["optimal_control/native-spral-src", "optimization/native-spral-src"]
native-spral-src-pthreads = [
    "optimal_control/native-spral-src-pthreads",
    "optimization/native-spral-src-pthreads",
]
native-spral-src-openmp = [
    "optimal_control/native-spral-src-openmp",
    "optimization/native-spral-src-openmp",
]
dynamic-spral-parity = [
    "optimal_control/dynamic-spral-parity",
    "optimization/dynamic-spral-parity",
]

[dependencies]
anyhow.workspace = true
libc.workspace = true
optimal_control = { path = "../optimal_control" }
optimization = { path = "../optimization" }
serde.workspace = true
serde_json.workspace = true
sx_core = { path = "../sx_core" }

[dev-dependencies]
approx.workspace = true
ssids_rs = { package = "ssids-rs", path = "../ssids-rs" }
sx_codegen_llvm = { path = "../sx_codegen_llvm" }
tempfile.workspace = true
