[package]
name = "optimal_control_webapp"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Local interactive web app for optimal_control problem demos."

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
axum = "0.8.6"
clap.workspace = true
libc.workspace = true
optimization = { path = "../optimization" }
optimal_control_problems = { path = "../optimal_control_problems" }
serde.workspace = true
serde_json.workspace = true
tokio = { version = "1.48.0", features = ["macros", "rt", "net", "sync"] }
tokio-stream = "0.1.17"

[dev-dependencies]
tempfile.workspace = true
