[package]
name = "optimization"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[features]
ipopt = ["dep:ipopt"]

[dependencies]
anyhow.workspace = true
clarabel.workspace = true
ipopt = { version = "0.6.0", optional = true }
nalgebra.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
examples_source = { path = "../examples_source" }
examples_run = { path = "../examples_run" }
rstest.workspace = true
sx_core = { path = "../sx_core" }
sx_codegen_llvm = { path = "../sx_codegen_llvm" }
