[package]
name = "optimization"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Exact-Hessian nonlinear optimization, symbolic JIT NLP construction, and solver integrations for ad_codegen_rs."

[lints]
workspace = true

[features]
ipopt = ["dep:ipopt"]
serde = ["dep:serde"]

[dependencies]
anyhow.workspace = true
clarabel.workspace = true
ipopt = { version = "0.6.0", optional = true }
libc.workspace = true
nalgebra.workspace = true
optimization_derive = { path = "../optimization_derive" }
serde = { workspace = true, optional = true }
spral_ssids = { path = "../spral_ssids" }
sx_codegen = { path = "../sx_codegen" }
sx_codegen_llvm = { path = "../sx_codegen_llvm" }
sx_core = { path = "../sx_core" }
thiserror.workspace = true

[dev-dependencies]
approx.workspace = true
examples_source = { path = "../examples_source" }
examples_run = { path = "../examples_run" }
proptest.workspace = true
rstest.workspace = true
serde_json.workspace = true
sparse_validation = { path = "../sparse_validation" }
tempfile.workspace = true
