[package]
name = "optimization"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Exact-Hessian nonlinear optimization, symbolic JIT NLP construction, and solver integrations for ad_codegen_rs."

[lints]
workspace = true

[features]
ipopt = ["dep:ipopt"]
nalgebra = ["vectorize/nalgebra"]
native-spral-src = ["ssids_rs/native-spral-src"]
native-spral-src-pthreads = ["ssids_rs/native-spral-src-pthreads"]
native-spral-src-openmp = ["ssids_rs/native-spral-src-openmp"]
dynamic-spral-parity = ["ssids_rs/dynamic-spral-parity"]
serde = ["dep:serde"]

[dependencies]
anyhow.workspace = true
clarabel.workspace = true
ipopt = { version = "0.6.0", optional = true }
libc.workspace = true
nalgebra.workspace = true
serde = { workspace = true, optional = true }
ssids_rs = { package = "ssids-rs", path = "../ssids-rs" }
sx_codegen = { path = "../sx_codegen" }
sx_codegen_llvm = { path = "../sx_codegen_llvm" }
sx_core = { path = "../sx_core" }
thiserror.workspace = true
vectorize = { path = "../vectorize" }

[dev-dependencies]
approx.workspace = true
examples_source = { path = "../examples_source" }
examples_run = { path = "../examples_run" }
proptest.workspace = true
rstest.workspace = true
serde_json.workspace = true
sparse_validation = { path = "../sparse_validation" }
tempfile.workspace = true
