[package]
name = "sx_codegen"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
sx_core = { path = "../sx_core" }

[dev-dependencies]
examples_source = { path = "../examples_source" }
