[package]
name = "sx_codegen_llvm"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "LLVM JIT and AOT code generation for symbolic SX functions in ad_codegen_rs."

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
llvm-sys.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2 = "0.10.9"
sx_codegen = { path = "../sx_codegen" }
sx_core = { path = "../sx_core" }

[dev-dependencies]
proptest.workspace = true
rstest.workspace = true
sx_core = { path = "../sx_core" }
tempfile.workspace = true
