[package]
name = "test_problems"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Internal nonlinear test-problem suite, dashboard, and regression runner for ad_codegen_rs."

[features]
ipopt = ["optimization/ipopt"]

[dependencies]
anyhow.workspace = true
clap.workspace = true
indicatif = "0.18.2"
optimization = { path = "../optimization" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sx_core = { path = "../sx_core" }

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true
