[package]
name = "test_problems"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Internal nonlinear test-problem suite, dashboard, and regression runner for ad_codegen_rs."
build = "build.rs"
default-run = "run"

[features]
ipopt = ["optimization/ipopt"]

[dependencies]
anyhow.workspace = true
axum = "0.8.6"
clap.workspace = true
indicatif = "0.18.2"
optimization = { path = "../optimization" }
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
sx_core = { path = "../sx_core" }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "sync"] }
tokio-stream = "0.1.17"

[dev-dependencies]
anyhow.workspace = true

[lints]
workspace = true
