[package]
name = "vectorize"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Scalar-leaf layout vectorization utilities for ad_codegen_rs."

[lints]
workspace = true

[features]
nalgebra = ["dep:nalgebra"]

[dependencies]
nalgebra = { workspace = true, optional = true }
sx_core = { path = "../sx_core" }
thiserror.workspace = true
vectorize_derive = { path = "../vectorize_derive" }
