[package]
name = "xtask"
version.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish = false
repository.workspace = true
rust-version.workspace = true
description = "Internal report and audit task runner for ad_codegen_rs."

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
bench_report = { path = "../bench_report" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
sparse_validation = { path = "../sparse_validation" }
